--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Promotion.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Promotion.cshtml
@@ -70,7 +70,9 @@
     }
 </div>
 
-<div style="margin-top:30px;">
+<p>&nbsp;</p>
+
+<div>
     <h3>@T("Admin.Catalog.Products.CrossSells")</h3>
 
     @if (Model.Id > 0)
@@ -109,31 +111,17 @@
                 </td>
             </tr>
             <tr>
-                <td width="100%">
-                    <button type="submit" id="btnAddNewCrossSellProduct" name="btnAddNewCrossSellProduct" class="btn btn-warning btn-below"
-                            onclick="javascript:OpenWindow('@(Url.Action("CrossSellProductAddPopup", "Product", new { productId = Model.Id, btnId = "btnRefreshCrossSellProducts", formId = "product-form" }))', 1000, 700, true); return false;">
-                        <i class="fa fa-plus"></i>
-                        @T("Admin.Catalog.Products.CrossSells.AddNew")
-                    </button>
+                <td>
+					<button type="button" id="AddCrossSellProductButton" class="btn btn-warning btn-below" data-loading-text="@(T("Common.Loading"))&hellip;">
+						<i class="fa fa-plus"></i>
+						@T("Admin.Catalog.Products.CrossSells.AddNew")
+					</button>
+
 					<button type="button" id="btnCreateMutuallyCrossSellProducts" class="btn btn-below" data-url="@Url.Action("CreateAllMutuallyCrossSellProducts", new { productId = Model.Id })"
 							data-ask="@T("Admin.Common.AskCreateMutuallyAssociations")">
 						<i class="fa fa-random"></i>
 						@T("Admin.Common.CreateMutuallyAssociations")
 					</button>
-
-                    <input type="submit" id="btnRefreshCrossSellProducts" name="btnRefreshCrossSellProducts" style="display: none" />
-                    <script type="text/javascript">
-                        $(document).ready(function () {
-                            $('#btnRefreshCrossSellProducts').click(function () {
-                                //refresh grid
-                                var optionsGrid = $("#crosssellproducts-grid");
-                                optionsGrid.data('tGrid').ajaxRequest();
-
-                                //return false to don't reload a page
-                                return false;
-                            });
-                        });
-                    </script>
                 </td>
             </tr>
         </table>
@@ -176,6 +164,33 @@
 						data: { "productId": @Model.Id, "selectedProductIds": ids },
 						callbackSuccess: function () {
 							$('#relatedproducts-grid').data('tGrid').ajaxRequest();
+						}
+					});
+					return true;
+				}
+			});
+
+		});
+
+		// add cross sell products
+		$(document).on('click', '#AddCrossSellProductButton', function () {
+
+			$({}).entityPicker('loadDialog', {
+				url: '@Url.Action("EntityPicker", "Common", new { area = "" })',
+				caption: '@T("Admin.Catalog.Products.CrossSells.AddNew")',
+				onLoadDialogBefore: function () {
+					$('#AddCrossSellProductButton').button('loading').prop('disabled', true);
+				},
+				onLoadDialogComplete: function () {
+					$('#AddCrossSellProductButton').prop('disabled', false).button('reset');
+				},
+				onOkClicked: function (ids) {
+					$({}).doAjax({
+						type: 'POST',
+						url: '@Url.Action("CrossSellProductAdd")',
+						data: { "productId": @Model.Id, "selectedProductIds": ids },
+						callbackSuccess: function () {
+							$('#crosssellproducts-grid').data('tGrid').ajaxRequest();
 						}
 					});
 					return true;
