Replaced adding product to manufacturer popup window by entity picker

--- a/src/Presentation/SmartStore.Web/Administration/Views/Category/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Category/_CreateOrUpdate.cshtml
@@ -393,7 +393,8 @@
 						{
 							commands.Edit().Localize(T);
 							commands.Delete().Localize(T);
-						}).Width(220);
+						})
+						.Width(220);
 					})
 					.Pageable(settings => settings.PageSize(Model.GridPageSize).Position(GridPagerPosition.Both))
 					.PreserveGridState()
